Add content about Mockito warning